<resources>
    <string name="app_name">My Restaurants</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_add">Add</string>

    <string name="form_enter_restaurant_name">Enter restaurant name:</string>
    <string name="form_enter_dish_name">Enter Dish name</string>
    <string name="form_choose_satisfacion">How good was the restaurant?</string>
    <string name="form_choose_quality">How good was the meal</string>
    <string name="very_good">Very good!</string>
    <string name="ok">OK, but could be better</string>
    <string name="dont_want_to_go_there_anymore">I don\'t want to go there anymore</string>
    <string name="commentary_form">Short commentary:</string>
    <string name="button_go">Go to the next step</string>
    <string name="add_restaurant_button">Add restaurant</string>

    <string name="how_good_list_item">How good is the restaurant: </string>
    <string name="commentary_list_item">Commentary: </string>
    <string name="title_restaurants">Restaurants</string>
    <string name="title_meals">Meals</string>
    <string name="title_bookings">Booking</string>
    <string name="save">SAVE</string>
    <string name="enter_time">Time</string>
    <string name="enter_date">Date</string>
    <string name="enter_address">Address</string>
    <string name="form_enter_restaurant_postcode">Enter restaurant postcode</string>
    <string name="place_have_the_meal">Place you had meal</string>
    <string name="really_bad">Very bad meal</string>
    <string name="meal_price">Price of the meal</string>
    <string name="enter_the_book_time">Time</string>
    <string name="enter_the_book_date">The Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
